Updated appsettings to add account database connection string

--- a/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
+++ b/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+  "ConnectionStrings": {
+    "MindTheMangoAccountDatabase": "Server=localhost;Port=5432;Database=mindthemangoaccount;User Id=mindthemangoaccount;Password=hunter2;"
+  },
+  "AllowedHosts": "*"
 }
