--- a/src/MindTheMango.Mind.Api.WebApi/appsettings.json
+++ b/src/MindTheMango.Mind.Api.WebApi/appsettings.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "ConnectionStrings": {
+    "MindTheMangoAccountDatabase": "Server=localhost;Port=5432;Database=mindthemangoaccount;User Id=mindthemangoaccount;Password=hunter2;"
   },
   "AllowedHosts": "*"
 }
