--- a/src/MindTheMango.Mind.Application.Implementation/MindTheMango.Mind.Application.Implementation.csproj
+++ b/src/MindTheMango.Mind.Application.Implementation/MindTheMango.Mind.Application.Implementation.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\MindTheMango.Mind.Application.Contract\MindTheMango.Mind.Application.Contract.csproj" />
+    </ItemGroup>
 
 </Project>
