--- a/src/MindTheMango.Mind.Common/MindTheMango.Mind.Common.csproj
+++ b/src/MindTheMango.Mind.Common/MindTheMango.Mind.Common.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
