--- a/src/MindTheMango.Mind.Common.Identity/MindTheMango.Mind.Common.Identity.csproj
+++ b/src/MindTheMango.Mind.Common.Identity/MindTheMango.Mind.Common.Identity.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MindTheMango.Mind.Common\MindTheMango.Mind.Common.csproj" />
+    </ItemGroup>
+
 </Project>
