--- a/src/MindTheMango.Mind.Common.Identity/MindTheMango.Mind.Common.Identity.csproj
+++ b/src/MindTheMango.Mind.Common.Identity/MindTheMango.Mind.Common.Identity.csproj
@@ -5,8 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="8.1.3" />
+      <PackageReference Include="MediatR" Version="6.0.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Scrutor" Version="3.0.2" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
     </ItemGroup>
 
@@ -15,3 +20,4 @@
     </ItemGroup>
 
 </Project>
+
