--- a/src/MindTheMango.Mind.Domain/MindTheMango.Mind.Domain.csproj
+++ b/src/MindTheMango.Mind.Domain/MindTheMango.Mind.Domain.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MindTheMango.Mind.Common\MindTheMango.Mind.Common.csproj" />
+    </ItemGroup>
+
 </Project>
