--- a/src/MindTheMango.Mind.Persistence.Contract/MindTheMango.Mind.Persistence.Contract.csproj
+++ b/src/MindTheMango.Mind.Persistence.Contract/MindTheMango.Mind.Persistence.Contract.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MindTheMango.Mind.Domain.Entity\MindTheMango.Mind.Domain.Entity.csproj" />
+    </ItemGroup>
+
 </Project>
