--- a/src/MindTheMango.Mind.Persistence.Implementation/MindTheMango.Mind.Persistence.Implementation.csproj
+++ b/src/MindTheMango.Mind.Persistence.Implementation/MindTheMango.Mind.Persistence.Implementation.csproj
@@ -14,4 +14,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
