--- a/src/MindTheMango.Mind.Persistence.Implementation/MindTheMango.Mind.Persistence.Implementation.csproj
+++ b/src/MindTheMango.Mind.Persistence.Implementation/MindTheMango.Mind.Persistence.Implementation.csproj
@@ -15,7 +15,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
+      <PackageReference Include="Scrutor" Version="3.0.2" />
     </ItemGroup>
 
 </Project>
