Deleted default example controller

--- a/src/MindTheMango.Mind.Api.WebApi/MindTheMango.Mind.Api.WebApi.csproj
+++ b/src/MindTheMango.Mind.Api.WebApi/MindTheMango.Mind.Api.WebApi.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\MindTheMango.Mind.Common.IoC\MindTheMango.Mind.Common.IoC.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers" />
+    </ItemGroup>
+
 </Project>
