--- a/src/MindTheMango.Mind.Api.WebApi/MindTheMango.Mind.Api.WebApi.csproj
+++ b/src/MindTheMango.Mind.Api.WebApi/MindTheMango.Mind.Api.WebApi.csproj
@@ -8,8 +8,10 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.OpenApi" Version="1.1.2" />
         <PackageReference Include="Serilog" Version="2.8.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-beta" />
     </ItemGroup>
 
     <ItemGroup>
