--- a/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
+++ b/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "MindTheMangoAccountDatabase": "Server=localhost;Port=5432;Database=mindthemangoaccount;User Id=mindthemangoaccount;Password=hunter2;"
+    "MindTheMangoAccountDatabase": "Server=localhost;Port=5433;Database=mindthemangoaccount;User Id=mindthemangoaccount;Password=hunter2mind;",
+    "MindTheMangoDatabase": "Server=localhost;Port=5432;Database=mindthemango;User Id=mindthemango;Password=hunter2mind;"
+  },
+  "OpenApi" : {
+    "Title": "Mind The Mango"
   },
   "AllowedHosts": "*"
 }
