--- a/src/MindTheMango.Mind.Api.WebApi/MindTheMango.Mind.Api.WebApi.csproj
+++ b/src/MindTheMango.Mind.Api.WebApi/MindTheMango.Mind.Api.WebApi.csproj
@@ -7,7 +7,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-        <DocumentationFile>bin\Debug\netcoreapp2.1\Argo.Athena.WebApi.xml</DocumentationFile>
+        <DocumentationFile>bin\Debug\netcoreapp2.1\MindTheMango.Mind.Api.WebApi.xml</DocumentationFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
