Created & implemented authentication extension for webapi

--- a/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
+++ b/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
@@ -6,5 +6,12 @@
   "OpenApi" : {
     "Title": "Mind The Mango"
   },
+  "Security": {
+    "Jwt": {
+      "Issuer": "http://localhost:5000",
+      "Audience": "http://localhost:5001",
+      "SecretKey": "ThisIsASecretKeyWowSoSecureSuchLongMuchH4cks"
+    }
+  },
   "AllowedHosts": "*"
 }
