--- a/src/MindTheMango.Mind.Application.Implementation/MindTheMango.Mind.Application.Implementation.csproj
+++ b/src/MindTheMango.Mind.Application.Implementation/MindTheMango.Mind.Application.Implementation.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="6.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="5.4.0" />
     </ItemGroup>
 
 </Project>
