Created sign-in method and ping in AuthController

--- a/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
+++ b/src/MindTheMango.Mind.Api.WebApi/appsettings.Development.json
@@ -10,7 +10,8 @@
     "Jwt": {
       "Issuer": "http://localhost:5000",
       "Audience": "http://localhost:5001",
-      "SecretKey": "ThisIsASecretKeyWowSoSecureSuchLongMuchH4cks"
+      "SecretKey": "ThisIsASecretKeyWowSoSecureSuchLongMuchH4cks",
+      "ValidFor": 3600
     }
   },
   "AllowedHosts": "*"
