--- a/src/MindTheMango.Mind.Common/MindTheMango.Mind.Common.csproj
+++ b/src/MindTheMango.Mind.Common/MindTheMango.Mind.Common.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="8.1.3" />
       <PackageReference Include="MediatR" Version="6.0.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
